css/style.css
/* ... */
      .package-select ul li:hover {
        background-color: #EEE; }
      .package-select ul li:last-child {
        border-bottom: none; }
      .package-select ul li span {
        pointer-events: none; }
    .package-select ul.hidden {
      display: none; }

@media (min-width: 576px) {
  .fz-30 {
    font-size: 20px;
    line-height: 1.3; }
  .px {
    padding-left: 50px !important;
    padding-right: 50px !important; }
  .form-group {
    margin-bottom: 20px; } }

@media (min-width: 768px) {
  .page-footer {
    padding: 16px 0; }
  .inputGroup .tab-a {
    width: 120px !important; }
    .inputGroup .tab-a .abbr {
      font-size: 18px !important; }
  .payment-img-slim {
    max-width: 150% !important;
    margin-right: -300px !important; }
  .offset-lg-1 {
    margin-left: -6% !important; } }

@media (min-width: 992px) {
  .section-3 {
    background: radial-gradient(circle closest-corner at 50% 100%, transparent 50%, #CCD0D3); }
  .inputGroup .tab-a {
    width: 70px !important; }
    .inputGroup .tab-a .abbr {
      font-size: 15px !important; } }

@media (min-width: 1200px) {
  h1, .h1 {
    font-size: 75px;
    letter-spacing: -1.9px; }
  h2, .h2 {
    font-size: 65px;
    letter-spacing: -1.9px; }
  h3, .h3 {
    font-size: 50px;
    letter-spacing: -1.9px; }
  h4, .h4 {
    font-size: 30px; }
  h5, .h5 {
    font-size: 26px; }
  .fz-30 {
    font-size: 30px;
    letter-spacing: -1px;
    line-height: 1.35; }
  .fz-24 {
    font-size: 24px;
    line-height: 1.3; }
  .fz-25 {
    font-size: 25px;
    line-height: 1.3; }
  .fz-15 {
    font-size: 15px;
    line-height: 1.3; }
  .fz-11 {
    font-size: 11px;
    line-height: 1.3; }
  .fz-20 {
    font-size: 20px;
    line-height: 1.3; }
  .button-lg {
    font-size: 20px; }
  .px {
    padding-left: 88px !important;
    padding-right: 88px !important; }
  .owl-body {
    max-width: 100%; }
    .owl-body > img {
      max-width: 800px; }
    .owl-body .owl-4 {
      padding: 0 22.3%; }
  .inputGroup .tab-a {
    width: 100px !important; }
    .inputGroup .tab-a .abbr {
      font-size: 18px !important; }
  .rtl-xl {
    direction: rtl; }
  .img-slim {
    transform: rotateY(180deg);
    max-width: initial;
    width: 800px;
    margin-right: -350px; }
  .payment-img-slim {
    max-width: initial !important;
    margin-right: -350px !important; } }

@media (min-width: 1350px) {
  .container {
    max-width: 1310px; }
  .owl-body .owl-4 {
    padding: 0 26%; }
  .section-6 h3, .section-6 .h3 {
    font-size: 48px; }
  .owl-2 .owl-nav [class*="owl-"].owl-prev {
    left: 50%;
    margin-left: -640px; }
  .owl-2 .owl-nav [class*="owl-"].owl-next {
    right: 50%;
    margin-right: -640px; }
  .offset-lg-1 {
    margin-left: 8.333333% !important; }
  .label-group {
    height: 280px !important; }
    .label-group img {
      width: 100% !important;
      margin: 0 !important; }
    .label-group .package-select {
      margin: 0 10px; } }

@media (min-width: 1500px) {
  .fancybox-navigation .fancybox-button--arrow_left {
    left: 50%;
    margin-left: -750px; }
  .fancybox-navigation .fancybox-button--arrow_right {
    right: 50%;
    margin-right: -750px; } }

@media (max-width: 1349px) {
  .li {
    padding: 10px 15px; } }

@media (max-width: 1199px) {
  .navbar-expand-xl > .container, .navbar-expand-xl > .container-fluid {
    padding-right: 15px !important;
    padding-left: 15px !important; } }

@media (max-width: 991px) {
  .owl-4 .owl-nav [class*="owl-"].owl-prev {
    left: -10px; }
  .owl-4 .owl-nav [class*="owl-"].owl-next {
    right: -10px; }
  .section-3 img {
    max-width: 150px; }
  .section-7 {
    background-size: inherit; }
  .navbar-expand-lg > .container, .navbar-expand-lg > .container-fluid {
    padding-right: 15px !important;
    padding-left: 15px !important; }
  .order-nav .item.done {
    padding-left: 12px !important; }
    .order-nav .item.done:after {
      content: '';
      top: 40% !important;
      width: 10px !important;
      height: 10px !important;
      background: url(../img/check.svg) 0 0 no-repeat !important;
      background-size: contain !important; }
  .order-nav .item {
    position: relative;
    font-size: 12px;
    padding: 0 !important;
    max-width: 15.2% !important;
    margin-right: 3% !important;
    margin-left: 3% !important; }
    .order-nav .item:first-child {
      margin-left: 0 !important; }
    .order-nav .item:last-child {
      margin-right: 0 !important; }
  .label-group {
    height: 240px !important; }
    .label-group img {
      width: 100% !important;
      margin: 0 !important; } }

@media (max-width: 767px) {
  .promo {
    font-size: 12px; }
  .owl-header .owl-dots {
    margin-left: -5px;
    margin-right: -5px; }
    .owl-header .owl-dots .owl-dot {
      padding-left: 5px;
      padding-right: 5px;
      margin-bottom: 10px;
      font-size: 12px; }
  .section-3, .section-5, .section-7, .section-8 {
    padding-top: 4rem;
    padding-bottom: 3rem; }
  .section-4, .section-6, .section-10 {
    padding-top: 4rem;
    padding-bottom: 4rem; }
  .section-12 .justify-content-start, .section-6 .justify-content-start {
    justify-content: center !important; }
  .payment-img-slim {
    width: 700px !important; } }
/* ... */

